--- a/MyResume/media/css/style.css
+++ b/MyResume/media/css/style.css
@@ -576,3 +576,11 @@ text {
         font-family: Verdana, Arial, Helvetica, sans-serif;
         cursor: pointer;
     }
+
+.certificationLabel {
+    fill: black;
+    font-size: 11px;
+    font-weight: normal;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    cursor: default;
+}
